<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"

        android:title="@string/action_clear"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_width"
        android:orderInCategory="100"
        android:title="@string/action_width"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_colors"
        android:orderInCategory="100"
        android:title="@string/action_colors"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bgcolors"
        android:orderInCategory="100"
        android:title="@string/action_bgcolors"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_radius"
        android:orderInCategory="100"
        android:title="@string/action_radius"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="never"/>
</menu>
